Basic graph works

--- a/app/assets/stylesheets/tickers.sass
+++ b/app/assets/stylesheets/tickers.sass
@@ -3,3 +3,15 @@ ul.ticker-menu
   li
     display: inline
     margin-left: 5%
+
+path
+  stroke: steelblue
+  stroke-width: 2
+  fill: none
+
+.axis path,
+.axis line
+  fill: none
+  stroke: grey
+  stroke-width: 1
+  shape-rendering: crispEdges
