--- a/app/views/usd_tickers/show.html.slim
+++ b/app/views/usd_tickers/show.html.slim
@@ -1,4 +1,4 @@
-h4#ticker-type data-type='usd' USD deals
+h4#ticker-type data-type='usd_deal' USD deals
 
 script
   | this.data = #{@deals.to_json(only: [:updated, :value]).html_safe}
