--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,9 +11,9 @@ html
     .menu
       ul.ticker-menu
         li 
-          =link_to 'BTC-USD', root_path
+          =link_to 'BTC-USD', root_path, class: 'usd-ticker-button'
         li 
-          =link_to 'BTC-EUR', root_path
+          =link_to 'BTC-EUR', root_path, class: 'eur-ticker-button'
         li 
-          =link_to 'BTC-RUR', root_path
+          =link_to 'BTC-RUR', root_path, class: 'rur-ticker-button'
     = yield
