--- a/app/views/usd_tickers/show.html.slim
+++ b/app/views/usd_tickers/show.html.slim
@@ -1,4 +1,4 @@
-h4#ticker-type data-type='usd_deal' USD deals
+h4#ticker-type data-type='usd' USD ticker
 
 script
   | this.chartData = #{@deals.to_json(only: [:updated, :value]).html_safe}
