Basic view setup

--- a/app/assets/stylesheets/tickers.sass
+++ b/app/assets/stylesheets/tickers.sass
@@ -1,9 +1,15 @@
+body
+  font-family: Roboto, sans-serif
+
 ul.ticker-menu
   list-style: none
   li
     display: inline
     margin-left: 5%
-
+    a.active
+      display: inline-block
+      background-color: #33adff
+      padding: 3px
 path
   stroke: steelblue
   stroke-width: 2
